# backend

./: .env.example  .gitignore  .python-version  Dockerfile  Procfile  README.md  docker-compose.yml  dockerfile  pyproject.toml  serve.py
.github/workflows/: docker-image.yml
credito/: __init__.py  auth.py  auth_jwt.py  credit_score.py  credito_brain.py  database.py  env.py  models.py  server.py  types.py  users.py
