[tool.poetry]
name = "credito"
version = "0.1.0"
description = ""
authors = ["Imon <royimonroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^18.3.1"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
faker-credit-score = "^0.3.0"
pydantic = {extras = ["email"], version = "^1.10.7"}

[tool.poetry.scripts]
serve = "credito:run_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
